Signed-off-by: Thomas Winkler <tom@toms-home.(none)>

--- a/admin/module/article/language/en_GB/en_GB.index.ini
+++ b/admin/module/article/language/en_GB/en_GB.index.ini
@@ -1,4 +1,6 @@
 [ARTICLE_INDEX]
-ARTICLE_INDEX001 = Welcome
-ARTICLE_INDEX002 = at the greates database for miniature railways in the world.
-ARTICLE_INDEX003 = Here you will find all the railways you are looking for, with a lot of information around it. Use the big and mighty search engine to get all information you are interested in.
+ARTICLE_INDEX001 = "Welcome"
+ARTICLE_INDEX002 = "at the OLIV content management system"
+ARTICLE_INDEX005 = "Multisession capable"
+ARTICLE_INDEX007 = "Only PHP > 5.3 and no database"
+
