Signed-off-by: Thomas Winkler <thomas.winkler@iggmp.net>

--- a/admin/language/de_DE.system.ini
+++ b/admin/language/de_DE.system.ini
@@ -42,6 +42,8 @@ SEARCH = "suchen"
 MAP = "Karte"
 WORLD_MAP = "Weltkarte"
 EDIT = "Bearbeiten"
+EDIT_TEXT = "Text bearbeiten"
+EDIT_IMG = "Bild bearbeiten"
 SAVE = "Sichern"
 
 [TIME]
