--- a/admin/language/en_GB.system.ini
+++ b/admin/language/en_GB.system.ini
@@ -37,6 +37,8 @@ SEARCH = "Search"
 MAP = "Map"
 WORLD_MAP = "World Map"
 EDIT = "Edit"
+EDIT_TEXT = "Edit text"
+EDIT_IMG = "Edit picture"
 SAVE = "Save"
 
 [TIME]
