Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/admin/page/download/language/de_DE.download.ini
+++ b/admin/page/download/language/de_DE.download.ini
@@ -1,3 +1,5 @@
-[PAGE_INDEX]
-ID = "Startseite"
-SITE_NAME = "OLIV herunterladen"
+[PAGE]
+ID = "download"
+NAME = "Herunterladen"
+FRIENDLY_NAME = "Herunterladen"
+TITLE = "OLIV herunterladen"
