--- a/admin/page/index/language/de_DE.index.ini
+++ b/admin/page/index/language/de_DE.index.ini
@@ -1,3 +1,5 @@
-[PAGE_INDEX]
-ID = Startseite
-SITE_NAME = Das Omni-Linguale CMS
+[PAGE]
+ID = "index"
+NAME = "Startseite"
+FRIENDLY_NAME = "Startseite"
+TITLE = "Das Omni-Linguale CMS"
