--- a/admin/page/documentation/language/de_DE.documentation.ini
+++ b/admin/page/documentation/language/de_DE.documentation.ini
@@ -1,3 +1,5 @@
-[PAGE_INDEX]
-ID = "Startseite"
-SITE_NAME = "OLIV Dokumentation"
+[PAGE]
+ID = "documentation"
+NAME = "Dokumentation"
+FRIENDLY_NAME = "Dokumentation"
+TITLE = "OLIV Dokumentation"
