--- a/admin/page/admin/language/en_GB.admin.ini
+++ b/admin/page/admin/language/en_GB.admin.ini
@@ -1,5 +1,5 @@
 [PAGE]
 ID = "admin"
-NAME = "administration"
-FRIENDLY_NAME = "administration"
+NAME = "Administration"
+FRIENDLY_NAME = "Administration"
 TITLE = "OLIV administration"
