--- a/documentation/session/module/article/language/en_GB.index.ini
+++ b/documentation/session/module/article/language/en_GB.index.ini
@@ -1,6 +1,6 @@
 [ARTICLE_INDEX]
-ARTICLE_INDEX001 = "Welcome"
-ARTICLE_INDEX002 = "at the OLIV content management system"
-ARTICLE_INDEX005 = "Multisession capable"
-ARTICLE_INDEX007 = "Only PHP > 5.3 and no database"
+ARTICLE_INDEX_001 = "Welcome"
+ARTICLE_INDEX_002 = "at the OLIV content management system"
+ARTICLE_INDEX_005 = "Multisession capable"
+ARTICLE_INDEX_007 = "Only PHP > 5.3 and no database"
 
