--- a/session/module/article/language/de_DE.index.ini
+++ b/session/module/article/language/de_DE.index.ini
@@ -1,4 +1,4 @@
 ; creaded by oliv
-; timestamp 1345472097
-; user admin
+; timestamp 1345638534
+; user tom
 [ARTICLE_INDEX]ARTICLE_INDEX_001 ='Die OLIV System Zentrale'ARTICLE_INDEX_002 ='An dieser Stelle kann Ihre Einzel-Session-Seite stehen. Rufen Sie die Dokumentation f&uuml;r mehr Informationen auf. Oder gehen sie in die Core-Administration und legen sie eine neue Session an.'
