Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/module/article/language/de_DE.index.ini
+++ b/session/module/article/language/de_DE.index.ini
@@ -1,4 +1,4 @@
 ; creaded by oliv
-; timestamp 1345983874
+; timestamp 1346072853
 ; user admin
-[ARTICLE_INDEX]ARTICLE_INDEX_001 ='Das OLIV Einstellungs Center'ARTICLE_INDEX_002 ='An dieser Stelle kann Ihre Einzel-Session-Seite stehen. Rufen Sie die Dokumentation f&uuml;r mehr Informationen auf. Oder gehen sie in die Core-Administration und legen sie eine neue Session an.'
+[ARTICLE_INDEX]ARTICLE_INDEX_001 ='Das OLIV Kontrollzentrum &nbsp;'ARTICLE_INDEX_002 ='An dieser Stelle kann Ihre Einzel-Session-Seite stehen. Rufen Sie die Dokumentation f&uuml;r mehr Informationen auf. Oder gehen sie in die Core-Administration und legen sie eine neue Session an.'
