--- a/session/module/article/language/de_DE.index.ini
+++ b/session/module/article/language/de_DE.index.ini
@@ -1,4 +1,4 @@
 ; creaded by oliv
-; timestamp 1346137151
-; user tom
+; timestamp 1346240610
+; user admin
 [ARTICLE_INDEX]ARTICLE_INDEX_001 ='Das OLIV Kontrollzentrum &nbsp;'ARTICLE_INDEX_002 ='An dieser Stelle kann Ihre Einzel-Session-Seite stehen. Rufen Sie die Dokumentation f&uuml;r mehr Informationen auf. Oder gehen sie in die Core-Administration und legen sie eine neue Session an.'
