--- a/session/module/menu/language/de_DE.menu.ini
+++ b/session/module/menu/language/de_DE.menu.ini
@@ -1,3 +1,6 @@
 [MOD_MENU]
 EXTERN_DOCUMENTATION = 'Dokumentation'
 IGGMP = 'IG - Gartenbahnem mit Personenebeförderung'
+
+MENU_NAME = "Seiten Name"
+MENU_LINK = "Link Ziel"
