Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/language/de_DE.system.ini
+++ b/session/language/de_DE.system.ini
@@ -41,11 +41,14 @@ NEWS = "Neuigkeiten"
 SEARCH = "suchen"
 MAP = "Karte"
 WORLD_MAP = "Weltkarte"
+
 EDIT = "Bearbeiten"
 EDIT_TEXT = "Text bearbeiten"
 EDIT_IMG = "Bild bearbeiten"
 SAVE = "Sichern"
 CANCEL = "Abbrechen"
+ADD = "Einfügen"
+REMOVE = "Entfernen"
 
 [TIME]
 FROM = "von"
