Signed-off-by: tom <thomas.winkler@iggmp.net>

--- a/session/module/menu/language/de_DE.menu.ini
+++ b/session/module/menu/language/de_DE.menu.ini
@@ -4,3 +4,5 @@ IGGMP = 'IG - Gartenbahnem mit Personenebeförderung'
 
 MENU_NAME = "Seiten Name"
 MENU_LINK = "Link Ziel"
+
+EDIT_MENU_ITEM = "Menüpunkt Bearbeiten"
