--- a/session/module/header/language/de_DE.default.ini
+++ b/session/module/header/language/de_DE.default.ini
@@ -1,3 +1,3 @@
 [MOD_HEADER]
 SITE_NAME = "Kontaktieren Sie uns"
-HEADER_TITLE = IG - Gartenbahnen mit Personenbeförderung
+HEADER_TITLE = 'IG - Gartenbahnen mit Personenbeförderung'
