--- a/session/page/test/language/test.xml
+++ b/session/page/test/language/test.xml
@@ -10,7 +10,7 @@
 	</NAME>
 	<FRIENDLY_NAME>
 		<text lang='de'>Testseite</text>
-		<text lang='en'>Test_page</text>
+		<text lang='en'>Testpage</text>
 	</FRIENDLY_NAME>
 	<TITLE>
 		<text lang='de'>Testseite für das Datenbank Modul</text>
